--- a/test.html
+++ b/test.html
@@ -67,7 +67,14 @@
                 </div>
             </div>
         </div>
+
     </nav>
+    <div class="hero-body">
+        <div class="container has-text-centered">
+            <img src="176-1762969_transparent-vector-crow-hd-png-download.png">
+
+        </div>
+    </div>
 </body>
 
 </html>
