--- a/test.html
+++ b/test.html
@@ -71,8 +71,8 @@
     </nav>
     <div class="hero-body">
         <div class="container has-text-centered">
-            <img src="176-1762969_transparent-vector-crow-hd-png-download.png">
-
+            <h1>Nova Prospekt</h1>
+            <h2>One to do everything</h2>
         </div>
     </div>
 </body>
