--- a/test.html
+++ b/test.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Nova Prospekt's website">
+    <meta name="author" content="Furious Feline">
     <title>Nova Prospekt</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <style>
         html {
             height: 100%;
+        }
+        
+        .selector-for-some-widget {
+            box-sizing: content-box;
         }
         
         body {
@@ -22,59 +28,7 @@
 </head>
 
 <body>
-    <nav class="navbar is-dark" role="navigation" aria-label="main navigation">
-        <div class="navbar-brand">
-            <h1 class="navbar-item">
-                Nova Prospekt
-            </h1>
-            <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
-                <span aria-hidden="true"></span>
-                <span aria-hidden="true"></span>
-                <span aria-hidden="true"></span>
-            </a>
-        </div>
 
-        <div id="navbarBasicExample" class="navbar-menu">
-            <div class="navbar-start">
-                <a class="navbar-item">
-              Home
-            </a>
-
-                <a class="navbar-item">
-              Documentation
-            </a>
-
-                <div class="navbar-item has-dropdown is-hoverable">
-                    <a class="navbar-link">
-                More
-              </a>
-
-                    <div class="navbar-dropdown">
-                        <a class="navbar-item">
-                  About
-                </a>
-                        <a class="navbar-item">
-                  Jobs
-                </a>
-                        <a class="navbar-item">
-                  Contact
-                </a>
-                        <hr class="navbar-divider">
-                        <a class="navbar-item">
-                  Report an issue
-                </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-    </nav>
-    <div class="hero-body">
-        <div class="container has-text-centered">
-            <h1>Nova Prospekt</h1>
-            <h2>One to do everything</h2>
-        </div>
-    </div>
 </body>
 
 </html>
